--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -150,11 +150,11 @@
 
 
  @misc{imitator,
-  	author =	{Andr{\'e}, {\'E}tienne},
+  	author =	{{IMITATOR Team}},
   	number =	{v2.6},
   	title =	{{IMITATOR Web page}},
   	url =	{http://www.lsv.ens-cachan.fr/Software/imitator/},
-  	year =	{2012},
+  	year =	{2013},
   	lipn-category = "real",
 }
 
