--- a/articles/2012-05-07-iFM/Poster-HYMITATOR/2012-05-HYMITATOR.tex
+++ b/articles/2012-05-07-iFM/Poster-HYMITATOR/2012-05-HYMITATOR.tex
@@ -233,7 +233,7 @@
 \begin{itemize}
 	\item \coulitem{Hybrid Automata} (HA): Sets of \vari{variables}, \actlab{actions}, locations, % (with an activity and an invariant)
 		and discrete transitions % (with jumps).
-	\item \coulitem{Parameterized Hybrid Automata}: HA augmented with a set of \param{timing parameters} (unknown constants)
+	\item \coulitem{Parameterized Hybrid Automata}: HA augmented with a set of \param{parameters} (unknown constants)
 	\vspace{1cm}
 	\item Example: Water Tank
 \end{itemize}
@@ -457,7 +457,7 @@
 
   \vspace{1cm}
 
-Synthesis problem: ``\couleur{find values for the timing parameters such that the system behaves well}''.
+Synthesis problem: ``\couleur{find values for the parameters such that the system behaves well}''.
 
 \vspace{1cm}
 
