improve todo list
git-svn-id: https://svn.lsv.ens-cachan.fr/kuehne/projects/IMITATOR2/branches/pta@752 6f1578d2-a1e8-4f7d-a79a-10a3a1991f00

--- a/privatedoc/todo.txt
+++ b/privatedoc/todo.txt
@@ -1,4 +1,16 @@
 ALGORITHMIC FEATURES
 - add urgent locations
+- allow for reversed -border mode
+
+MODEL FEATURES
+- allow DISCRETE * parameters in clock updates (and more generally DISCRETE * anything)
+	needed by Giuseppe
+- have several locations in the "bad" definition (avoids to create a global deadline-miss-observer in the case of scheduling problems)
 
 USER INTERFACE
+
+
+
+
+THEORETICAL QUESTIONS
+- 
