prepare options and an empty file for distributed version
git-svn-id: https://svn.lsv.ens-cachan.fr/kuehne/projects/IMITATOR2/trunk@775 6f1578d2-a1e8-4f7d-a79a-10a3a1991f00

--- a/privatedoc/todo.txt
+++ b/privatedoc/todo.txt
@@ -45,6 +45,17 @@ USER INTERFACE
 ************************************************************
 
 
+
+************************************************************
+SOFTWARE ENGINEERING
+************************************************************
+[ ] One object class per algorithm
+	A function CheckOptions that checks consistency wrt this algorithm
+	An output as an object!
+
+[ ] Generic data structures
+
+
 ************************************************************
 INTERNAL
 ************************************************************
