--- a/privatedoc/todo.txt
+++ b/privatedoc/todo.txt
@@ -15,6 +15,7 @@ ALGORITHMIC FEATURES
 
 
 
+
 ************************************************************
 EFFICIENCY AND OPTIMIZATIONS
 ************************************************************
@@ -43,7 +44,7 @@ OUTPUT FEATURES
 ************************************************************
 USER INTERFACE
 ************************************************************
-
+Exception quand plus de mémoire !! (important pour PaTATOR)
 
 
 ************************************************************
