Implemented EFI further; Detected a bug for the graphical output of BC when more than 2 parameters
git-svn-id: https://svn.lsv.ens-cachan.fr/kuehne/projects/IMITATOR2/trunk@788 6f1578d2-a1e8-4f7d-a79a-10a3a1991f00

--- a/privatedoc/todo.txt
+++ b/privatedoc/todo.txt
@@ -1,4 +1,12 @@
 ************************************************************
+BUGS
+************************************************************
+[!] graphical cartography seems not to work when called with more than 2 parameters
+	example: flipflop.imi (with all parameters) and flipflop.v0
+	it works well with 2 parameters only
+
+
+************************************************************
 ALGORITHMIC FEATURES
 ************************************************************
 [!!!] PDBMs
