--- a/privatedoc/todo.txt
+++ b/privatedoc/todo.txt
@@ -5,6 +5,8 @@ BUGS
 	example: flipflop.imi (with all parameters) and flipflop.v0
 	it works well with 2 parameters only
 
+[!] NumConst was not tested (and, indeed, numconst_of_string does not work) for negative numbers !!!
+
 
 ************************************************************
 ALGORITHMIC FEATURES
