experiments on BC / EF / EFIM
git-svn-id: https://svn.lsv.ens-cachan.fr/kuehne/projects/IMITATOR2/trunk@794 6f1578d2-a1e8-4f7d-a79a-10a3a1991f00

--- a/privatedoc/todo.txt
+++ b/privatedoc/todo.txt
@@ -48,6 +48,9 @@ MODEL FEATURES
 ************************************************************
 OUTPUT FEATURES
 ************************************************************
+[ ] BC: give the number of tiles reduced to a point, and the number of points not covered at all (when IM does not finish)
+
+
 [ ] allow cartography for inverse method
 [ ] always output a cartography when 2D, even for IM, and always colour it if some good/bad states have been defined
 [ ] Rétablir le fait que -with-parametric-log active -with-log
