--- a/privatedoc/todo.txt
+++ b/privatedoc/todo.txt
@@ -53,6 +53,7 @@ OUTPUT FEATURES
 
 [ ] allow graphical cartography for inverse method
 [ ] always output a cartography when 2D, even for IM, and always colour it if some good/bad states have been defined
+[ ] pass as an option the min and max bounds for the 2D graphical cartography, especially for EF or IM simple (where there is no v0)
 [ ] Rétablir le fait que -with-parametric-log active -with-log
 
 [ ] rétablir (de HyMITATOR) le fait que contrôle+C rende un résultat partiel
