more unsuccessful experiments for EFIM (cont.)
git-svn-id: https://svn.lsv.ens-cachan.fr/kuehne/projects/IMITATOR2/trunk@809 6f1578d2-a1e8-4f7d-a79a-10a3a1991f00

--- a/privatedoc/todo.txt
+++ b/privatedoc/todo.txt
@@ -43,6 +43,8 @@ MODEL FEATURES
 [!!!] allow DISCRETE * parameters in clock updates (and more generally DISCRETE * anything)
 	needed by Giuseppe
 [?] have several locations in the "bad" definition (avoids to create a global deadline-miss-observer in the case of scheduling problems)
+[ ] allow model duplication (e.g., n clients automatically generated)
+[ ] allow more than one bad location (e.g., in Fischer: property := unreachable loc[proc1] = cs1 AND loc[proc2] = cs2)
 
 
 ************************************************************
