big work on NumConst: found and solved a bug in is_integer ; found (but not solved) a bug in _from_float ; implemented random_integer ; wrote a new sery of tests. Also added gmp.mli for documentation.
git-svn-id: https://svn.lsv.ens-cachan.fr/kuehne/projects/IMITATOR2/trunk@861 6f1578d2-a1e8-4f7d-a79a-10a3a1991f00

--- a/privatedoc/todo.txt
+++ b/privatedoc/todo.txt
@@ -7,6 +7,7 @@ BUGS
 
 [!] NumConst was not tested (and, indeed, numconst_of_string does not work) for negative numbers !!!
 
+[!] NumConst.numconst_of_float does not give the specified result! (it is used in Pi0Parser)
 
 ************************************************************
 ALGORITHMIC FEATURES
