now BC does not take into account premature termination of IM (except if safe)
git-svn-id: https://svn.lsv.ens-cachan.fr/kuehne/projects/IMITATOR2/trunk@910 6f1578d2-a1e8-4f7d-a79a-10a3a1991f00

--- a/privatedoc/todo.txt
+++ b/privatedoc/todo.txt
@@ -33,6 +33,8 @@ EFFICIENCY AND OPTIMIZATIONS
 
  OPTIMISATIONS A FAIRE POUR L'EXECUTION
 
+[ ] heuristics: automatically stop EFIM if a bad tile is found, e.g., after 2 times more states, or 2 times more iterations
+
 [ ] METTRE DES TABLES DE HASH et non des tableaux pour transitions, gardes, invariants, etc. Avantage : (beaucoup) moins de choses en memoire, execution a peine plus lente.
 
 
