--- a/privatedoc/todo.txt
+++ b/privatedoc/todo.txt
@@ -58,14 +58,15 @@ OUTPUT FEATURES
 [ ] allow graphical cartography for inverse method
 [ ] always allow output a cartography when 2D, even for IM, and always colour it if some good/bad states have been defined
 [ ] pass as an option the min and max bounds for the 2D graphical cartography, especially for EF or IM simple (where there is no v0)
+	-draw-cart-x-min / -draw-cart-y-max
 [ ] Rétablir le fait que -with-parametric-log active -with-log
 
 [ ] rétablir (de HyMITATOR) le fait que contrôle+C rende un résultat partiel
 
 Options names:
-- rename -with-dot with -draw-trace-set (ou -output-trace-set?)
-- rename -cart with -draw-cart
-- rename -PTA2JPG with -draw-PTA
+- rename -with-dot with -draw-trace-set (or -output-trace-set? or -plot-trace-set?)
+- rename -cart with -draw-cart or plot-cart ?
+- rename -PTA2JPG with -draw-PTA or plot-PTA ?
 - rename -with-log with ??? -output-states? -write-states?
 
 
